# dmail-flask

./: .env.example  README.md  pyproject.toml
dmail/: config.py  extensions.py  main.py  models.py  telegram_bot.py  views.py
